Fix QA test